Fix image size, repositin text on mobile

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -169,15 +169,19 @@
 
 .dark_card--title {
 	padding-top: 1.375rem;
-	text-align: center;
+
+  @include govuk-media-query($from: desktop) {
+		text-align: center;
+  }
 }
 
 .dark_card--image {
 	display: block;
+	height: 81px;
 	margin: auto;
-	// max-width: 12rem;
+	max-width: 16rem;
 
   @include govuk-media-query($from: desktop) {
-		height: 81px;
+		width: auto;
   }
 }
